k8s/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: boilerplate
  labels:
    run: boilerplate
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4000
  selector:
    app: boilerplate
