k8s/app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: boilerplate
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: boilerplate
          servicePort: 80
